# computer_enhance

./: .gitmodules
decoding-multiple-instructions-and-suffixes/: listing_39.decoded_instructions.txt  listing_40.decoded_instructions.txt
decoding-multiple-instructions-and-suffixes/source/: binary_stream.py  decode_enums.py  manual_disasembler.py
instruction-decoding-on-the-8086/: manual_disasembler.py
opcode-patterns-in-8086/source/: decode_enums.py  manual_disasembler.py
simulating-add-sub-cmp/cpp_implementation/: CMakeLists.txt  test_commands.txt
simulating-add-sub-cmp/cpp_implementation/include/: change_tracking.h  commands.h  register_proxy.h  register_types.h  registers.h  simulator.h
simulating-add-sub-cmp/cpp_implementation/source/: commands.cpp  main.cpp  register_proxy.cpp  register_types.cpp  registers.cpp  simulator.cpp
simulating-add-sub-cmp/source/: logger.py  registers.py  simulator.py
simulating-movs/source/: registers.py  simulator.py
